update index.html, styles1, styles2 in styles2 branch

--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1,11 +1,11 @@
 /* Стилі для заголовка */
 h1 {
     text-align: center; /* Центрувати заголовок */
-    color: blue;
+    color: red;
 }
 
 /* Стилі для абзаців */
 p {
     text-align: center; /* Центрувати текст абзаців */
-    color: blue;
+    color: red;
 }
