--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1,7 +1,7 @@
 /* Стилі для заголовка */
 h1 {
     text-align: center; /* Центрувати заголовок */
-    color: red;
+    color: blue;
 }
 
 /* Стилі для абзаців */
