--- a/styles/styles4.css
+++ b/styles/styles4.css
@@ -1,5 +1,5 @@
 h3 {
     text-align: center; /* Центрувати заголовок */
     color: black;
-    background-color: aqua;
+    background-color: azure;
 }
